tests/errors/incomplete_display.stderr
error[E0277]: `E` doesn't implement `std::fmt::Display`
  --> tests/errors/incomplete_display.rs:15:20
   |
15 |     println!("{}", E::Dot);
   |                    ^^^^^^ `E` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `E`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
